--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -3,12 +3,16 @@
 @import './imports/register.css';
 @import './imports/form.css';
 @import './imports/segmentMessage.css';
+@import './imports/mainPageSearchBar.css';
+@import './imports/mainPageProducts.css';
+
 
 .main-container {
-    width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 90px 0;
+    padding: 0 15px;
 }
 
 .app-container {
@@ -16,7 +20,6 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin-top: 80px;
     width: 100vw;
-    max-width: 1100px;
+    max-width: 1300px;
 }
