--- a/src/assets/css/imports/mainPageProducts.css
+++ b/src/assets/css/imports/mainPageProducts.css
@@ -2,7 +2,7 @@
     position: fixed !important;
 }
 
-.products-grid {
+.home-page-container .products-grid {
     display: grid;
     grid-template-columns: repeat(4, 250px);
     grid-gap: 1.2rem; 
@@ -10,35 +10,35 @@
     margin-bottom: 20px;
 }
 
-.product-card {
+.home-page-container .product-card {
     width: 250px;
     height: 250px;
     margin: 0 !important;
 }
 
-.product-link {
+.home-page-container .product-link {
     width: 100%;
     height: 170px;
 }
 
-.product-slider {
+.home-page-container .product-slider {
     width: 100%;
     height: 170px;
 }
 
-.product-image-container {
+.home-page-container .product-image-container {
     width: 100%;
     height: 170px;
 }
 
-.product-image {
+.home-page-container .product-image {
     width: 100%;
     height: 170px;
     background-size: cover;
     border-radius: .3rem .3rem 0 0 !important;
 }
 
-.header {
+.home-page-container .header {
     text-align: left;
     margin-left: 16px;
     margin-top: 5px;
@@ -46,14 +46,14 @@
     font-weight: 800;
 }
 
-.continent {
+.home-page-container .continent {
     text-align: left;
     margin-left: 18px;
     font-size: .95rem !important;
     font-weight: 600 !important;
 }
 
-.price {
+.home-page-container .price {
     text-align: left;
     margin-left: 18px;
     margin-top: 10px;
@@ -61,7 +61,7 @@
     font-weight: 700 !important;
 }
 
-.length {
+.home-page-container .length {
     margin: 15px 0;
     font-size: 1.4rem;
     font-weight: 600;
@@ -69,48 +69,48 @@
 }
 
 @media all and (max-width: 1180px) {
-    .products-grid {
+    .home-page-container .products-grid {
         grid-template-columns: repeat(3, 250px);
     }
 }
 
 
 @media all and (max-width: 940px) {
-    .products-grid {
+    .home-page-container .products-grid {
         grid-template-columns: repeat(2, 250px);
     }
 }
 
 
 @media all and (max-width: 590px) {
-    .products-grid {
+    .home-page-container .products-grid {
         grid-template-columns: repeat(1, 350px);
     }
         
-    .product-card {
+    .home-page-container .product-card {
         width: 360px !important;
         height: 315px;
     }
         
-    .product-link {
+    .home-page-container .product-link {
         height: 220px;
     }
 
-    .product-slider {
+    .home-page-container .product-slider {
         height: 220px;
     }
 
-    .product-image-container {
+    .home-page-container .product-image-container {
         height: 220px;
     }
 
-    .product-image {
+    .home-page-container .product-image {
         height: 220px;
     }
 }
 
 @media all and (max-width: 445px) {
-    .products-grid {
+    .home-page-container .products-grid {
         display: flex;
         justify-content: center;
         align-content: center;
@@ -118,7 +118,7 @@
         flex-direction: column;
     }
 
-    .product-card {
+    .home-page-container .product-card {
         width: 300px !important;
         height: 315px;
     }
