--- a/src/assets/css/imports/productDetails.css
+++ b/src/assets/css/imports/productDetails.css
@@ -20,6 +20,7 @@
     width: 350px;
     height: 250px;
     margin: 0 40px;
+    margin-left: 120px;
 }
 
 .view-container .product-image-container {
@@ -40,7 +41,11 @@
 }
 
 .details {
-    margin-top: 70px !important;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
 }
 
 .details h2 {
@@ -92,10 +97,15 @@
     .product-details-container {
         flex-direction: column;
         align-items: center;
+        margin-left: -10px;
     }
-    
+        
+    .details-image-container {
+        margin-left: 60px;
+    }
+        
     .details {
-        margin-top: 50px;
+        margin-top: 80px !important;
     }
 
     .login-add-container a ,
@@ -118,14 +128,15 @@
 
     .details {
         margin-top: 100px;
-        display: flex;
         align-items: center;
-        justify-content: center;
-        flex-direction: column;
     }
 }
 
 @media all and (max-width: 350px) {
+    .product-details-container {
+        margin-left: 0px;
+    }
+
     .details-image-container {
         width: 230px;
         height: 220px;
