--- a/src/assets/css/imports/navbar.css
+++ b/src/assets/css/imports/navbar.css
@@ -26,6 +26,33 @@
     background-color: #dedeeb !important;
 }
 
+.nav-avatar-container {
+    display: flex !important;
+    justify-content: center !important;
+    align-content: center !important;
+    align-items: center !important;
+    width: 100% !important;
+    padding: 5px 0 !important;  
+}
+
+.nav-avatar {
+    width: 25px;
+    height: 25px;
+    background-size: cover;
+    border-radius: 50%;
+    margin-right: 6px;
+}
+
+.nav-avatar-btn {
+    padding: 0 12px !important;
+    background: none !important;
+    color: #000 !important;
+}
+
+.nav-avatar-btn:hover {
+    background: rgba(0, 0, 0, .2) !important;
+}
+
 @media all and (max-width: 440px) {
     .responsive-sign-in {
         font-size: .7rem !important;
