--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -8,6 +8,7 @@
 @import './imports/productDetails.css';
 @import './imports/cart.css';
 @import './imports/resetPass.css';
+@import './imports/settings.css';
 
 *,
 *::before,
