Finished Control Product And Upload Product

--- a/src/assets/css/imports/navbar.css
+++ b/src/assets/css/imports/navbar.css
@@ -49,6 +49,16 @@
     color: #000 !important;
 }
 
+
+
+.nav-btn {
+    background: none !important;
+}
+
+.nav-btn:hover {
+    background: rgba(0, 0, 0, .2) !important;
+}
+
 .nav-avatar-btn:hover {
     background: rgba(0, 0, 0, .2) !important;
 }
