--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -9,6 +9,9 @@
 @import './imports/cart.css';
 @import './imports/resetPass.css';
 @import './imports/settings.css';
+@import './imports/productControl.css';
+@import './imports/productUpload.css';
+@import './imports/editProduct.css';
 
 *,
 *::before,
