--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -46,13 +46,13 @@
     border-radius: .5rem;
 }
 
-.link {
+.link-container .link {
     font-size: 1.3rem;
     font-weight: 600;
     color: #1f5ed3;
 }
 
-.link:hover {
+.link-container .link:hover {
     color: #0942ad;
     text-decoration: underline;
 }
