--- a/src/assets/css/imports/resetPass.css
+++ b/src/assets/css/imports/resetPass.css
@@ -9,3 +9,9 @@
 .reset-form-container .btn-container {
     margin-bottom: 10px;
 }
+
+@media all and (max-width: 500px) {
+    .reset-form-container {
+        width: 90%;
+    }
+}
